fix some alignment style in add review box

--- a/frontend/src/components/ProductDetails/ProductDetails.css
+++ b/frontend/src/components/ProductDetails/ProductDetails.css
@@ -171,6 +171,13 @@
     margin: 1vmax 1vmax;
 }
 
+.reviewSubmitBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
 
 @media screen and (max-width: 600px) {
 
